# CI-Sage

./: .gitignore  LICENSE  README.md  env.example  manage.py  pyproject.toml  railway.toml  railway_migrate.py  requirements-railway.txt  requirements.txt
.github/workflows/: tests.yml
app/: main.py
app/api/: webhooks.py
app/core/: config.py  database.py  github.py
app/models/: __init__.py  database.py  schemas.py
app/services/: auto_fix.py  claude_analyzer.py  learning_system.py  workflow_processor.py
tests/: test_app.py
